--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,10 @@ _saved_*
 # OwnCloud conflicts:
 *_conflict-*
 
+# ------------------------------------------
+# Jekyll
+_site
+Gemfile.lock
 
 # ------------------------------------------
 # Python
